Login with registry support

--- a/gui/inventory-web/app/index.html
+++ b/gui/inventory-web/app/index.html
@@ -16,6 +16,7 @@
     <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="node_modules/angular-cookies/angular-cookies.js"></script>
     <script src="app.js"></script>
+    <script src="components/registry/services.js"></script>
     <script src="components/authentication/services.js"></script>
     <script src="components/authentication/controller.js"></script>
     <script src="components/entities/controller.js"></script>
