--- a/gui/inventory-web/app/index.html
+++ b/gui/inventory-web/app/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html ng-app="InventoryWeb">
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Lagerverwaltung</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//netdna.bootstrapcdn.com/bootswatch/3.3.1/slate/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="app.css">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
 
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-route/angular-route.js"></script>
-    <script src="node_modules/angular-cookies/angular-cookies.js"></script>
-    <script src="app.js"></script>
-    <script src="components/registry/services.js"></script>
-    <script src="components/authentication/services.js"></script>
-    <script src="components/authentication/controller.js"></script>
-    <script src="components/entities/controller.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+    <title>Lagerverwaltung</title>
+
+    <style type="text/css">
+        /**
+         * Hide when Angular is not yet loaded and initialized
+         */
+        [ng-cloak] {
+            display: none;
+        }
+    </style>
 </head>
-<body>
 
-    <div ng-view></div>
+<body ng-cloak layout="column">
+
+<div ui-view></div>
+
+<script src="./jspm_packages/system.js" type="text/javascript"></script>
+<script src="./config.js" type="text/javascript"></script>
+<script type="text/javascript">
+    System
+            .import('app/boot')
+            .catch(console.error.bind(console)); // make sure any errors print to console
+</script>
 
 </body>
 </html>
