--- a/gui/inventory-web/app/index.html
+++ b/gui/inventory-web/app/index.html
@@ -3,21 +3,36 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap-3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/app.css">
     <title>Lagerverwaltung</title>
 </head>
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" ui-sref="home">Home</a>
+            <a class="navbar-brand" href="#">Lagerverwaltung</a>
         </div>
-        <div ui-view="login" class="container"></div>
+        <div class="navbar-collapse collapse">
+            <div class="container"><div app-login></div></div>
+        </div><!--/.nav-collapse -->
     </div>
-</nav>
+</div>
 
-<div ui-view></div>
+<div class="row">
+        <div class="col-md-3">
+            <div class="well">
+                <div app-menu></div>
+            </div>
+        </div>
+        <div class="col-md-9">
+
+            <div ui-view></div>
+
+        </div> <!-- /container -->
+</div>
+
 
 <script src="./jspm_packages/system.js" type="text/javascript"></script>
 <script src="./config.js" type="text/javascript"></script>
@@ -26,6 +41,5 @@
             .import('app/boot')
             .catch(console.error.bind(console)); // make sure any errors print to console
 </script>
-
 </body>
 </html>
