--- a/gui/inventory-web/app/index.html
+++ b/gui/inventory-web/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap-3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/app.css">
+    <link rel="stylesheet" type="text/css" href="jspm_packages/github/angular-ui/bower-ui-grid@3.0.7/ui-grid.css">
     <title>Lagerverwaltung</title>
 </head>
 
