WEB: Current state of oauth2.

--- a/gui/inventory-web/app/index.html
+++ b/gui/inventory-web/app/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap-3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/app.css">
     <link rel="stylesheet" type="text/css" href="jspm_packages/github/angular-ui/bower-ui-grid@3.0.7/ui-grid.css">
+    <base href="/web/index.html">
     <title>Lagerverwaltung</title>
 </head>
 
